<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/INTRODUCE_PLAYER_NUMBER"
            android:textAllCaps="true"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/player_number_down_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/decrease_button_background"/>

            <TextView
                android:id="@+id/player_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="0"
                android:textSize="22sp"/>

            <Button
                android:id="@+id/player_number_up_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/increase_button_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/PLAYERS"
                android:textAllCaps="false"
                android:textSize="22sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/INTRODUCE_HOLE_NUMBER"
            android:textAllCaps="true"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/ASK_MINI_GOLF"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/hole_number_down_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/decrease_button_background"/>

            <TextView
                android:id="@+id/hole_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="0"
                android:textSize="22sp"/>

            <Button
                android:id="@+id/hole_number_up_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/increase_button_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/HOLES"
                android:textAllCaps="false"
                android:textSize="22sp"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/continue_to_new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/continue_new_game_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_orange_background"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:text="@string/CONTINUE"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"/>

    </RelativeLayout>

</RelativeLayout>